# rag-knowledge-api

./: .env.example  .env.local.example  .gitignore  .renderignore  Dockerfile  LICENSE  README.md  alembic.ini  convert_model.py  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  test.txt  よく使うコマンド.md  一旦
alembic/: env.py
alembic/versions/: cc82cf7c5570_create_users_and_documents_tables.py
app/: config.py  database.py  main.py
app/api/: auth.py  documents.py  search.py
app/core/: deps.py  security.py
app/models/: base.py  document.py  init.py  user.py
app/schemas/: document.py  search.py  user.py
app/services/: embeddings.py  embeddings_old.py  vector_store.py
tests/: conftest.py  test_auth.py  test_documents.py  test_search.py
